# Xe-Release

./: .gitignore  README.md  README.release-gtk4  fly.xpm
XeRelease_Gtkmm3/: CMakeLists.txt  meson.build
XeRelease_Gtkmm3/res/: menubar.xml  prefs.ui  xerelease.gresource.xml
XeRelease_Gtkmm3/src/: MyDialog.cc  MyDialog.hh  MyPrefs.cc  MyPrefs.hh  MyWin.cc  MyWin.hh  main.cc  xe_config  xeapi.cc  xerelease.cc  xerelease.hh
XeRelease_Gtkmm4/: CMakeLists.txt  meson.build
XeRelease_Gtkmm4/.cache/clangd/index/: config.hh.8AB68388F871D2F9.idx  xeapi.cc.8A683D815D807207.idx  xeapi.hh.F4D71284128FECDA.idx  xerelease.cc.E889730882E25083.idx  xerelease.hh.E0FEC50EDD4ACCD9.idx
XeRelease_Gtkmm4/res/: compile-resource.sh  menubar.xml  prefs.ui  style.css  style_dark.css  xerelease.gresource.xml
XeRelease_Gtkmm4/src/: ModelColumns.hh  MsgBox.cc  MsgBox.hh  MyDialog.cc  MyDialog.hh  MyPrefs.cc  MyPrefs.hh  MyWin.cc  MyWin.hh  config.hh  main.cc  os_detector.hh  xeapi.cc  xeapi.hh  xerelease.cc  xerelease.hh
xerelease/: CMakeLists.txt
xerelease-gtk4/: CMakeLists.txt
xerelease-gtk4/res/: compile-resource.sh  gtk60.resource.xml
xerelease-gtk4/src/: MyDialog.cpp  MyDialog.h  gtkwin.cpp  gtkwin.h  main.cpp  resources.7z  xeapi.h
xerelease/res/: compile-resource.sh  gtk59.resource.xml  menubar.xml
xerelease/src/: MyDialog.cpp  gtkwin.cpp  main.cpp  resources.7z  xerelease.h
